--- a/SemanticaCSS/login.css
+++ b/SemanticaCSS/login.css
@@ -1,15 +1,43 @@
 body {
-    background: rgb(137,53,193);
-background: linear-gradient(90deg, rgba(137,53,193,1) 39%, rgba(172,69,190,1) 49%, rgba(184,18,221,1) 100%);
+    text-align: center;
+    background: rgb(137, 53, 193);
+    background: linear-gradient(90deg, rgba(137, 53, 193, 1) 39%, rgba(172, 69, 190, 1) 49%, rgba(184, 18, 221, 1) 100%);
 }
+
 .form {
     text-align: center;
 }
 
 .form h1 {
-    color: white;
+    color: black;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-.perfil {
-    text-align: center;
-    width: 50%;
+
+img {
+    width: 20%;
+    opacity: 50%;
+
+}
+
+label {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+    font-size: 20px;
+}
+
+input {
+    background-color: black;
+    opacity: 50%;
+}
+
+.enviar {
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+}
+
+.limpar {
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
 }
