--- a/SemanticaCSS/style.css
+++ b/SemanticaCSS/style.css
@@ -1,20 +1,24 @@
 body {
-    background-color: darkgray;
+    background-image: radial-gradient(circle 610px at 5.2% 51.6%, rgba(5, 8, 114, 1) 0%, rgba(7, 3, 53, 1) 97.5%);
 }
+
 #menu {
     width: 100%;
     height: 70px;
-    background-color: red;
+    background-color: rgb(255, 255, 255);
 }
+
 #menu img {
     height: 55px;
     margin-left: 10px;
 }
-.linkMenu {   
-    color: aliceblue;
-    font-size: 2em;
-    margin-left: 20px;
-    margin-right: 20px;
+
+.linkMenu {
+    color: rgba(7, 3, 53, 1);
+    font-size: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .parte1 {
@@ -23,15 +27,28 @@ body {
     text-align: center;
 
 }
+
 .parte1 img {
     margin-top: 20px;
     width: 75%;
     height: 500px;
 }
+
 .parte1 h1 {
-    color: red;
+    color: rgb(255, 255, 255);
 }
+
 .parte1 p {
     font-family: 'Times New Roman', Times, serif;
     color: azure;
+}
+
+header {
+    height: 80px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    z-index: 1;
+    top: 0;
 }
