--- a/AtividadeRensponsividade/style.css
+++ b/AtividadeRensponsividade/style.css
@@ -70,5 +70,9 @@ body {
     .banner .texto {width: 100%; text-align: center; margin-top: 20px;}
     .banner h1 {font-size: 18px;}
     .banner img {width: 100%; height: 300px; margin-top: 20px;float: none;}
+    .part2 {padding: 0px 20px 20px;}
+    .part2 p {width: 100%; text-align: center; margin-top: 20px;}
+    .part2 h1 {font-size: 18px;}
+    .part2 img {width: 100%; height: 300px; margin-top: 20px;float: none;}
     
 }
