--- a/AtividadeBootsrap/style.css
+++ b/AtividadeBootsrap/style.css
@@ -1,4 +1,6 @@
-.carousel-inner img {
-    width: 100%;
-    height: 50vh;
+.carousel-inner h3 {
+    color: white;
+}
+.carousel-inner p {
+    color: white;
 }
