--- a/SiteDeEventos/style.css
+++ b/SiteDeEventos/style.css
@@ -56,7 +56,7 @@ a {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.card-image img {
+.card-image{
     height: 250px;
     width: 100%;
     border-radius: 8px 8px 0px 0;
@@ -95,6 +95,7 @@ a {
     color: #000000;
 }
 
+
 .card-button {
     display: flex;
     justify-content: center;
@@ -110,4 +111,11 @@ a {
     background-color: #ca9905;
     color: #000000;
 
+}
+
+/* Style cadastro Evento */
+
+footer {
+    position: fixed; 
+    width: 100%;
 }
