--- a/SA3/css/styleCronometro.css
+++ b/SA3/css/styleCronometro.css
@@ -2,7 +2,6 @@
 
 body{
     margin: 0;
-    display: flex;
     background-color: grey;
     justify-content: center;
 }
@@ -16,6 +15,7 @@ body{
     align-items: center;
 }
 
+/* Style cronômetro */
 
 .cron {
     width: 450px;
@@ -26,7 +26,7 @@ body{
 }
 
 .temporizador{
-    width: 100vw;
+    width: 100%;
     font-size: 4em;
     font-weight: bold;
     font-family: 'Montserrat', sans-serif;
@@ -61,6 +61,8 @@ button {
     position: static;
 }
 
+/* Responsividade */
+
 @media screen and (max-width:768px) {
     .cron {
         width: 250px;
@@ -84,5 +86,18 @@ button {
     button {
         height: 1.25vh;
         font-size: 5px;
+    }
+}
+
+@media screen and (max-width:214px) {
+    .cron {
+        width: 100px;
+    }
+    .temporizador{
+        font-size: 0.9em;
+    }
+    button {
+        height: 3vh;
+        font-size: 7px;
     }
 }
