--- a/SA3/css/styleIndex.css
+++ b/SA3/css/styleIndex.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 
+
 body {
     background-color: rgb(215, 213, 213);
 }
@@ -13,7 +14,8 @@ header {
     background-color: rgb(54, 51, 51);
 }
 
-.nav-item {
+.nav-item,
+.seta {
     text-decoration: none;
     font-size: 1.7em;
     font-weight: bold;
@@ -21,66 +23,124 @@ header {
     font-family: 'Quicksand', sans-serif;
 }
 
-.nav-item:hover{
+.nav-item:hover,
+.seta {
     color: rgb(173, 173, 173);
     transition: 0.1s;
     cursor: pointer;
 }
 
-
+.nav{
+    
+}
 
 .row {
     margin-top: 20em;
     justify-content: center;
 }
 
-.piano {
-    font-size: 1.5em;
+button {
+    border: 0;
+}
+
+.card-sl {
     background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items:end;
-    width: 100%;
-    height: 8vh;
-    box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.203);
     border-radius: 8px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.cronometro {
-    font-size: 1.5em;
-    background-color: white;
+#cron-card:hover {
+    box-shadow: 0 4px 8px 0 rgba(5, 242, 49, 0.468), 0 6px 20px 0 rgba(41, 187, 63, 0.19);
+}
+
+.card-image{
+    height: 250px;
+    width: 100%;
+    border-radius: 8px 8px 0px 0;
+}
+
+
+#cron-button {
     display: flex;
     justify-content: center;
-    align-items: end;
+    padding: 10px 0;
     width: 100%;
-    height: 8vh;
-    box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.142);
-    border-radius: 8px;
-}
-
-.jogoDaVelha {
+    background-color: #ffffff;
+    color: #000000;
+    border-radius: 0 0 8px 8px;
+    font-weight: bold;
     font-size: 1.5em;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    width: 100%;
-    height: 8vh;
-    box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.142);
-    border-radius: 10px;
+    font-family: 'Quicksand', sans-serif;
 }
 
-.piano:hover {
-    background-color: rgba(241, 196, 97, 0.678);
+#cron-button:hover {
+    text-decoration: none;
+    background-color: #66dc72c1;
+    color: #ffffff;
     transition: 0.3s;
+
 }
+
+#jogoVelha-button {
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+    width: 100%;
+    background-color: #ffffff;
+    color: #000000;
+    border-radius: 0 0 8px 8px;
+    font-weight: bold;
+    font-size: 1.5em;
+    font-family: 'Quicksand', sans-serif;
+}
+
+#jogoVelha-button:hover {
+    text-decoration: none;
+    background-color: rgb(230, 164, 228);
+    color: #ffffff;
+    transition: 0.3s;
+
+}
+
+#jogoVelha-card:hover {
+    box-shadow: 0 4px 8px 0 rgba(242, 5, 230, 0.468), 0 6px 20px 0 rgba(201, 55, 179, 0.19);
+}
+
+#piano-button {
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+    width: 100%;
+    background-color: #ffffff;
+    color: #000000;
+    border-radius: 0 0 8px 8px;
+    font-weight: bold;
+    font-size: 1.5em;
+    font-family: 'Quicksand', sans-serif;
+}
+
+#piano-button:hover {
+    text-decoration: none;
+    background-color: #5bb1e0c1;
+    color: #ffffff;
+    transition: 0.3s;
+
+}
+
+#piano-card:hover{
+    box-shadow: 0 4px 8px 0 rgba(72, 207, 245, 0.468), 0 6px 20px 0 rgba(55, 169, 201, 0.19);
+}
+
+
 
 .cronometro:hover {
     background-color: rgba(119, 250, 152, 0.678);
+    color: white;
     transition: 0.3s;
 }
 
 .jogoDaVelha:hover {
     background-color: rgba(246, 152, 255, 0.678);
+    color: white;
     transition: 0.3s;
 }
