--- a/SA3/css/styleCronometro.css
+++ b/SA3/css/styleCronometro.css
@@ -1,9 +1,46 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 
 body{
     margin: 0;
     background-color: grey;
     justify-content: center;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 500,
+  'GRAD' 0,
+  'opsz' 24
+}
+
+header {
+    background-color: rgb(54, 51, 51);
+}
+
+.nav-item, .seta {
+    text-decoration: none;
+    font-size: 1.7em;
+    font-weight: bold;
+    color: white;
+    font-family: 'Quicksand', sans-serif;
+}
+
+.nav-item:hover, .seta{
+    color: rgb(173, 173, 173);
+    transition: 0.1s;
+    cursor: pointer;
+}
+
+.nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.seta {
+    width: 1%;
 }
 
 
@@ -13,6 +50,14 @@ body{
     width: 100%;
     justify-content: center;
     align-items: center;
+}
+
+a {
+    color: white;
+    font-size: 20px;
+    text-decoration: none;
+    margin-left: 10px;
+    font-family: 'Montserrat', sans-serif;
 }
 
 /* Style cronômetro */
@@ -66,13 +111,16 @@ button {
 @media screen and (max-width:768px) {
     .cron {
         width: 250px;
+        transition: 0.3s;
     }
     .temporizador{
         font-size: 2.3em;
+        transition: 0.3s;
     }
     button {
         height: 3.5vh;
         font-size: 10px;
+        transition: 0.3s;
     }
 }
 
@@ -89,7 +137,14 @@ button {
     }
 }
 
+@media screen and (max-width:250px) {
+    .nav-item{
+        font-size: 1em;
+        transition: 0.3s;
+    }
+}
 @media screen and (max-width:214px) {
+    
     .cron {
         width: 100px;
     }
