--- a/SA3/css/stylePiano.css
+++ b/SA3/css/stylePiano.css
@@ -7,6 +7,10 @@
      align-items: center;
  }
 
+ a {
+    text-decoration: none;
+}
+
  .material-symbols-outlined {
     font-variation-settings:
     'FILL' 0,
