--- a/SA3/css/styleJogoDaVelha.css
+++ b/SA3/css/styleJogoDaVelha.css
@@ -15,6 +15,10 @@
         font-size: 70px;
     }
 
+    a {
+        text-decoration: none;
+    }
+
     .material-symbols-outlined {
         font-variation-settings:
         'FILL' 0,
