--- a/SA3/css/stylePiano.css
+++ b/SA3/css/stylePiano.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
  
  body {
+    margin: 0;
      background-color: lightblue;
      display: flex;
      justify-content: center;
@@ -16,7 +17,7 @@
     'FILL' 0,
     'wght' 500,
     'GRAD' 0,
-    'opsz' 24
+    'opsz' 24;
   }
   
   .cabecalho {
@@ -48,148 +49,169 @@
   .cabecalho .seta {
       width: 1%;
       margin-left: 1em;
+
   }
   
 
- .navbar {
-    margin-top: 15px;
+
+
+
+
+
+
+
+
+
+
+
+
+
+body {
+    background-color: lightblue;
     display: flex;
-    color: white;
- }
- .navbar .tittle {
-    margin-top: 10px;
-    margin-left: 55px;
- }
- .navbar .icon {
-    margin-right: 100px;
-    margin-top: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.header {
+   margin-top: 15px;
+   display: flex;
+   color: white;
+}
+.header .tittle {
+   margin-top: 10px;
+   margin-left: 55px;
+}
+.header .icon {
+   margin-right: 100px;
+   margin-top: 10px;
+   display: flex;
+   justify-content: space-between;
+   width: 150px;
+}
+
+.container-main {
+    background-color: black;
+    margin-top: 600px;
+    width: 1200px;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+    border-radius: 20px;
+    position: absolute;
+}
+
+
+.container1 {
+    position: absolute;
+    margin-left: 123px;
+    margin-top: 66px;
+}
+
+.header {
     display: flex;
     justify-content: space-between;
-    width: 150px;
- }
+    width: 100%;
+    position: absolute;
+}
 
- .container-main {
-     background-color: black;
-     margin-top: 600px;
-     width: 1200px;
-     justify-content: center;
-     align-items: center;
-     height: 400px;
-     border-radius: 20px;
-     position: absolute;
- }
+.tittle {
+    margin-top: 1px;
+}
 
 
- .container1 {
-     position: absolute;
-     margin-left: 123px;
-     margin-top: 66px;
- }
-
- .navbar {
-     display: flex;
-     justify-content: space-between;
-     width: 100%;
-     position: absolute;
- }
-
- .tittle {
-     margin-top: 1px;
- }
-
-
- .container #btn15 {
-     margin-left: 80px;
- }
+.container #btn15 {
+    margin-left: 80px;
+}
 
 
 
- /* 
+/* 
 ESTILIZAÇÃO PRIMEIRA PARTE DOS BOTÕES */
- #btn0 {
-     width: 32px;
-     height: 180px;
-     background-color: black;
-     border-radius: 6px;
+#btn0 {
+    width: 32px;
+    height: 180px;
+    background-color: black;
+    border-radius: 6px;
 box-shadow: 0 6px 0 grey;
- }
+}
 
- #btn1 {
-     width: 32px;
-     height: 180px;
-     margin-left: 32px;
-     background-color: black;
-     border-radius: 6px;
+#btn1 {
+    width: 32px;
+    height: 180px;
+    margin-left: 32px;
+    background-color: black;
+    border-radius: 6px;
 box-shadow: 0 6px 0 grey;
- }
+}
 
- #btn2,
- #btn5,
- #btn11 {
-     width: 32px;
-     height: 180px;
-     margin-left: 27px;
-     background-color: black;
-     border-radius: 6px;
+#btn2,
+#btn5,
+#btn11 {
+    width: 32px;
+    height: 180px;
+    margin-left: 27px;
+    background-color: black;
+    border-radius: 6px;
 box-shadow: 0 6px 0 grey;
- }
+}
 
- #btn3,
- #btn4,
- #btn6,
- #btn7,
- #btn8,
- #btn9,
- #btn12,
- #btn13,
- #btn14 {
-     width: 32px;
-     height: 180px;
-     margin-left: 28px;
-     background-color: black;
-     border-radius: 6px;
+#btn3,
+#btn4,
+#btn6,
+#btn7,
+#btn8,
+#btn9,
+#btn12,
+#btn13,
+#btn14 {
+    width: 32px;
+    height: 180px;
+    margin-left: 28px;
+    background-color: black;
+    border-radius: 6px;
 box-shadow: 0 6px 0 grey;
- }
+}
 
- #btn10 {
-     width: 32px;
-     height: 180px;
-     margin-left: 29px;
-     background-color: black;
-     border-radius: 6px;
+#btn10 {
+    width: 32px;
+    height: 180px;
+    margin-left: 29px;
+    background-color: black;
+    border-radius: 6px;
 box-shadow: 0 6px 0 grey;
- }
+}
 
 
- #btn15 {
-     height: 275px;
-     width: 60px;
-     background-color: white;
-     margin-top: 30px;
- }
+#btn15 {
+    height: 275px;
+    width: 60px;
+    background-color: white;
+    margin-top: 30px;
+}
 
- #btn16,
- #btn17,
- #btn18,
- #btn19,
- #btn20,
- #btn21,
- #btn22,
- #btn23,
- #btn24,
- #btn25,
- #btn26,
- #btn27,
- #btn28,
- #btn29,
- #btn30 {
-     height: 275px;
-     width: 60px;
-     background-color: white;
- }
+#btn16,
+#btn17,
+#btn18,
+#btn19,
+#btn20,
+#btn21,
+#btn22,
+#btn23,
+#btn24,
+#btn25,
+#btn26,
+#btn27,
+#btn28,
+#btn29,
+#btn30 {
+    height: 275px;
+    width: 60px;
+    background-color: white;
+}
 
 #btn0:hover,#btn1:hover,#btn2:hover,#btn3:hover,#btn4:hover,#btn5:hover,#btn6:hover,#btn7:hover,#btn8:hover,#btn9:hover,#btn10:hover,
-#btn11:hover,#btn12:hover,#btn13:hover,#btn14:hover{background-color: white;
+#bt11:hover,#btn12:hover,#btn13:hover,#btn14:hover{background-color: white;
 border: 0;
 border-radius: 6px;
 box-shadow: 0 6px 0 grey;
@@ -230,230 +252,229 @@ background-color: snow;
 
 
 
- @media screen and (max-width:1150px) {
-   
-     body {
-         display: flex;
-         justify-content: center;
-         align-items: center;
-     }
-     
- .navbar {
-    display: none;
- }
- .navbar .tittle {
-    display: none;
- }
- .navbar .icon {
+@media screen and (max-width:1150px) {
+  
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+.header {
    display: none;
- }
+}
+.header .tittle {
+   display: none;
+}
+.header .icon {
+  display: none;
+}
 
-     .container-main {
-         width: 800px;
-         height: 232px;
-         margin-top: 560px;
-         display: flex;
-         padding-right: 60px;
-         padding-bottom: 22px;
-         transition: 0.4s;
-     }
+    .container-main {
+        width: 800px;
+        height: 232px;
+        margin-top: 560px;
+        display: flex;
+        padding-right: 60px;
+        padding-bottom: 22px;
+        transition: 0.4s;
+    }
 
-     .container1 {
-         display: flex;
-         justify-content: center;
-         width: 600px;
-         margin-right: 175px;
-         margin-bottom: 100px;
-         transition: 0.4s;
-     }
-
-     .container {
-         margin-top: 1px;
-         margin-right: 20px;
-         transition: 0.4s;
-     }
-
-     #btn0 {
-         width: 20px;
-         height: 100px;
-         margin-left: 110px;
-         transition: 0.4s;
-
-     }
-
-     #btn1 {
-         width: 20px;
-         height: 100px;
-         transition: 0.4s;
-
-
-
-     }
-
-     #btn2,
-     #btn5,
-     #btn11 {
-         width: 20px;
-         height: 100px;
-         transition: 0.4s;
-
-     }
-
-     #btn3,
-     #btn4,
-     #btn6,
-     #btn7,
-     #btn8,
-     #btn9,
-     #btn12,
-     #btn13 {
-         width: 20px;
-         height: 100px;
-         transition: 0.4s;
-
-     }
-
-     #btn14 {
-
-         width: 20px;
-         height: 100px;
-         transition: 0.4s;
-
-     }
-
-     #btn10 {
-         width: 20px;
-         height: 100px;
-         transition: 0.4s;
-     }
-
-
-
-
-     #btn15 {
-         height: 175px;
-         width: 40px;
-         background-color: white;
-         margin-top: 5px;
-         transition: 0.4s;
-
-     }
-
-     #btn16,
-     #btn17,
-     #btn18,
-     #btn19,
-     #btn20,
-     #btn21,
-     #btn22,
-     #btn23,
-     #btn24,
-     #btn25,
-     #btn26,
-     #btn27,
-     #btn28,
-     #btn29,
-     #btn30 {
-         height: 175px;
-         width: 40px;
-         background-color: white;
-         transition: 0.4s;
-
-     }
-
- }
-
-
-
-
- @media screen and (max-width:768px) {
-     body {
-         display: flex;
-         justify-content: center;
-         align-items: center;
-         transition: 0.4s;
-     }
-
-     .container-main {
-         width: 584px;
-         height: 169px;
-         margin-top: 408px;
-         display: flex;
-         padding-right: 44px;
-         padding-bottom: 16px;
-         transition: 0.4s;
-     }
-     .container1 {
+    .container1 {
         display: flex;
         justify-content: center;
         width: 600px;
-        margin-right: 180px;
+        margin-right: 175px;
         margin-bottom: 100px;
-        margin-left: 233px;
         transition: 0.4s;
     }
-     .container {
-         margin-bottom: 20px;
-         margin-right: 14px;
-         transition: 0.4s;
-     }
 
-    
-
- #btn1,
- #btn0,
- #btn2, #btn3,
-
- #btn4, #btn5,
- #btn6,
- #btn7,
- #btn8,
- #btn10,#btn11,
- #btn9,
- #btn12{
-     width: 17px;
-     height: 73px;
-     margin-left: 16px;
-     transition: 0.4s;
-
- }
- 
- #btn13,
- #btn14 {
-    display: none;
- }
-
- #btn15 {
-     height: 128px;
-     width: 29px;
-     background-color: white;
-     margin-top: 4px;
-     transition: 0.4s;
-
- }
-
- #btn16, #btn17{
-    display: none;
-}
- #btn18,
- #btn19,
- #btn20,
- #btn21,
- #btn22,
- #btn23,
- #btn24,
- #btn25,
- #btn26,
- #btn27,
- #btn28,
- #btn29,
- #btn30 {
-     height: 128px;
-     width: 29px;
-     background-color: white;
-     transition: 0.4s;
+    .container {
+        margin-top: 1px;
+        margin-right: 20px;
+        transition: 0.4s;
     }
 
- }
+    #btn0 {
+        width: 20px;
+        height: 100px;
+        margin-left: 110px;
+        transition: 0.4s;
 
- 
+    }
+
+    #btn1 {
+        width: 20px;
+        height: 100px;
+        transition: 0.4s;
+
+
+
+    }
+
+    #btn2,
+    #btn5,
+    #btn11 {
+        width: 20px;
+        height: 100px;
+        transition: 0.4s;
+
+    }
+
+    #btn3,
+    #btn4,
+    #btn6,
+    #btn7,
+    #btn8,
+    #btn9,
+    #btn12,
+    #btn13 {
+        width: 20px;
+        height: 100px;
+        transition: 0.4s;
+
+    }
+
+    #btn14 {
+
+        width: 20px;
+        height: 100px;
+        transition: 0.4s;
+
+    }
+
+    #btn10 {
+        width: 20px;
+        height: 100px;
+        transition: 0.4s;
+    }
+
+
+
+
+    #btn15 {
+        height: 175px;
+        width: 40px;
+        background-color: white;
+        margin-top: 5px;
+        transition: 0.4s;
+
+    }
+
+    #btn16,
+    #btn17,
+    #btn18,
+    #btn19,
+    #btn20,
+    #btn21,
+    #btn22,
+    #btn23,
+    #btn24,
+    #btn25,
+    #btn26,
+    #btn27,
+    #btn28,
+    #btn29,
+    #btn30 {
+        height: 175px;
+        width: 40px;
+        background-color: white;
+        transition: 0.4s;
+
+    }
+
+}
+
+
+
+
+@media screen and (max-width:768px) {
+    body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: 0.4s;
+    }
+
+    .container-main {
+        width: 584px;
+        height: 169px;
+        margin-top: 408px;
+        display: flex;
+        padding-right: 44px;
+        padding-bottom: 16px;
+        transition: 0.4s;
+    }
+    .container1 {
+       display: flex;
+       justify-content: center;
+       width: 600px;
+       margin-right: 180px;
+       margin-bottom: 100px;
+       margin-left: 233px;
+       transition: 0.4s;
+   }
+    .container {
+        margin-bottom: 20px;
+        margin-right: 14px;
+        transition: 0.4s;
+    }
+
+   
+
+#btn1,
+#btn0,
+#btn2, #btn3,
+
+#btn4, #btn5,
+#btn6,
+#btn7,
+#btn8,
+#btn10,#btn11,
+#btn9,
+#btn12{
+    width: 17px;
+    height: 73px;
+    margin-left: 16px;
+    transition: 0.4s;
+
+}
+
+#btn13,
+#btn14 {
+   display: none;
+}
+
+#btn15 {
+    height: 128px;
+    width: 29px;
+    background-color: white;
+    margin-top: 4px;
+    transition: 0.4s;
+
+}
+
+#btn16, #btn17{
+   display: none;
+}
+#btn18,
+#btn19,
+#btn20,
+#btn21,
+#btn22,
+#btn23,
+#btn24,
+#btn25,
+#btn26,
+#btn27,
+#btn28,
+#btn29,
+#btn30 {
+    height: 128px;
+    width: 29px;
+    background-color: white;
+    transition: 0.4s;
+   }
+
+}
+
