--- a/ProjetoAngular/MeuPrimeiroAngular/src/app/header/header.component.html
+++ b/ProjetoAngular/MeuPrimeiroAngular/src/app/header/header.component.html
@@ -3,5 +3,7 @@
         <li class="nav-item"><a routerLink="/" class="nav-link" aria-current="page">Home</a></li>
         <li class="nav-item"><a routerLink="/contato" class="nav-link">Contato</a></li>
         <li class="nav-item"><a routerLink="/sobre" class="nav-link">Sobre</a></li>
+        <li class="nav-item"><a href="/formulario" class="nav-link">Formulario</a></li>
     </ul>
 </header>
+<h2>Bem-vindo, {{usuario.nome}}</h2>
